# Motoman

./: .env  .gitignore  .gitmodules  README.md  motoman.py  pyproject.toml  sample.moto  static.json
.github/workflows/: README.md  python-package.yml  python-publish.yml
app/: .eslintrc.js  .eslintrc.tsx  .lintstagedrc.json  BUILD.md  index.html  package-lock.json  package.json  tailwind.config.js
app/devlog/: 12-April-21-Setup.md  ProjectSetup.md
app/public/: index.html  manifest.json
app/src/: App.tsx  index.html  styles.css
firmware/: README.md  platformio.ini
firmware/docs/: Platforio.md
firmware/docs/devlog/: 12April21.md  13April21.md  15April21.md  16April21.md
firmware/include/: Globals.h  Types.h  board.h
firmware/lib/CurrentSensor/src/: CurrentSensor 2.cpp  CurrentSensor 2.h  CurrentSensor.cpp  CurrentSensor.h
firmware/lib/DOF6/: library 2.json  library.json
firmware/lib/DOF6/src/: DOF6 2.h  DOF6.cpp  DOF6.h
firmware/lib/FeedbackMotor/: library.json
firmware/lib/FeedbackMotor/src/: FeedbackMotor 2.h  FeedbackMotor.cpp  FeedbackMotor.h
firmware/lib/MotorController/: Globals.h  MotorController.cpp  MotorController.h  MotorSetup.h
firmware/lib/OffsetEncoder/: library 2.json
firmware/lib/PID/: library 2.json  library.json
firmware/lib/Serial/: Serial.cpp  Serial.h  Types.h
firmware/lib/SerialShell/: README.md  library 2.json  library.json
firmware/lib/SerialWriter/: library 2.json  library.json
firmware/src/: Motor.cpp  main.cpp  main.h
firmware/src/Firmware/: firmware 2.h  main 2.cpp  main.cpp
firmware/src/StandaloneTests/: README.md
motoman/: entry.py
motoman/client/: README.md
motoman/server/: README.md
motors_manager/: __init__.py  nubia.py  nubia_plugin.py  nubia_status.py
motors_manager/commands/: some_commands.py
motors_manager/commands/devices/: ports.py
test/: ProjectContext.py  test_add.py
tests/: ProjectContext.py  test_lexer.py  test_ports.py
(+43 files in other folders)
